--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,39 +2,33 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Weather Journal</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <title>Travel App</title>
   </head>
   <body>
     <div id="app">
-      <div class="holder headline">Weather Journal App</div>
-      <div class="holder zip">
-        <label for="zip">Enter Zipcode here</label>
-        <input type="text" id="zip" placeholder="enter zip code here" />
-        <div id="zip-wrong"></div>
-      </div>
-      <div class="holder feel">
-        <label for="feelings">How are you feeling today?</label>
-        <textarea
-          class="myInput"
-          id="feelings"
-          placeholder="Enter your feelings here"
-          rows="9"
-          cols="50"
-        ></textarea>
+      <div class="holder headline">Travel App</div>
+      <div class="holder city">
+        <label for="city">City</label>
+        <input type="text" id="city" placeholder="Enter city here" />
+        <div id="city-wrong"></div>
       </div>
       <button id="generate" type="submit">Generate</button>
       <div class="holder entry">
-        <div class="title">Most Recent Entry</div>
-        <div id="entryHolder">
-          <div id="date"></div>
-          <div id="temp"></div>
-          <div id="content"></div>
-        </div>
+        <div class="title">GeoNames</div>
+        <table id="entryHolder">
+          <tr>
+            <td>Latitude</td>
+            <td id="lat"></td>
+          </tr>
+          <tr>
+            <td>Longitude</td>
+            <td id="lon"></td>
+          </tr>
+          <tr>
+            <td>Country</td>
+            <td id="country"></td>
+          </tr>
+        </table>
       </div>
     </div>
     <!-- <script src="app.js" type="text/javascript"></script> -->
