--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,7 +15,7 @@
       <button id="generate" type="submit">Generate</button>
       <div class="holder entry">
         <div class="title">GeoNames</div>
-        <table id="entryHolder">
+        <table id="geo-names">
           <tr>
             <td>Latitude</td>
             <td id="lat"></td>
@@ -29,6 +29,21 @@
             <td id="country"></td>
           </tr>
         </table>
+        <table id="weather-bit">
+          <tr>
+            <td>Temperature</td>
+            <td id="temp"></td>
+          </tr>
+          <tr>
+            <td>Cloud coverage</td>
+            <td id="clouds"></td>
+          </tr>
+          <tr>
+            <td>City</td>
+            <td id="city-name"></td>
+          </tr>
+        </table>
+        <div id="pixabay-image"></div>
       </div>
     </div>
     <!-- <script src="app.js" type="text/javascript"></script> -->
