--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -5,10 +5,10 @@ body {
 
 #app {
   display: grid;
-  grid-auto-rows: minmax(200px, auto);
-  height: 100vh;
+  // grid-auto-rows: minmax(200px, auto);
+  // height: 100vh;
   background: #fff;
-  color: #f0d43a;
+  color: #22b2da;
   justify-content: center;
   grid-gap: 1em;
   font-size: 20px;
@@ -18,9 +18,38 @@ body {
 .holder {}
 
 .entry {
-  background: rgba(59, 74, 107, 0.4);
-  color: #ff0;
-  text-align: center;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-evenly;
+
+  table {
+    caption {
+      font: optional;
+      font-size: 26px;
+      font-weight: bold;
+      color: #22b2da;
+    }
+
+    td {
+      padding: 8px;
+      border-bottom: 1px #f00 dotted;
+    }
+
+    .city-data {
+      text-align: right;
+    }
+  }
+
+  #pixabay-image {
+    text-align: center;
+    padding: 16px 0 16px 0;
+
+    img {
+      box-shadow: #333 10px 10px 10px;
+    }
+  }
 }
 
 #entryHolder {}
@@ -52,22 +81,21 @@ input {
   height: 60px;
   width: 99.5%;
   background: #22b2da;
-  color: #f0d43a;
+  color: #fff;
   font-size: 20px;
   font-family: "Oswald", sans-serif;
   border: none;
 }
 
 button {
-  width: 100%;
-  height: 75px;
-  background: #3b4a6b;
-  color: #f0d43a;
-  font-size: 26px;
+  background: #22b2da;
+  color: #fff;
+  font-size: 24px;
   font-family: "Oswald", sans-serif;
   border: none;
   box-shadow: 2px 4px 5px #444;
   margin: auto;
+  padding: 12px;
 }
 
 h1 {
