--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -13,41 +13,85 @@ body {
   grid-gap: 1em;
   font-size: 20px;
   font-family: "Oswald", sans-serif;
-}
 
-.holder {}
+  .headline {
+    font-size: 50px;
+    // text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    text-shadow: 2px 2px 4px #000000;
+    font-family: fantasy;
+  }
 
-.entry {
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: space-evenly;
+  .user-input {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-evenly;
 
-  table {
-    caption {
-      font: optional;
-      font-size: 26px;
-      font-weight: bold;
-      color: #22b2da;
+    label {
+      font-size: 24px;
     }
 
-    td {
-      padding: 8px;
-      border-bottom: 1px #f00 dotted;
-    }
-
-    .city-data {
-      text-align: right;
+    input {
+      display: block;
+      height: 60px;
+      background: #22b2da;
+      color: #fff;
+      font-size: 20px;
+      font-family: "Oswald", sans-serif;
+      border: none;
     }
   }
 
-  #pixabay-image {
-    text-align: center;
-    padding: 16px 0 16px 0;
+  button {
+    background: #22b2da;
+    color: #fff;
+    font-size: 24px;
+    font-family: "Oswald", sans-serif;
+    border: none;
+    box-shadow: 2px 4px 5px #444;
+    margin: auto;
+    padding: 12px;
+  }
 
-    img {
-      box-shadow: #333 10px 10px 10px;
+  .holder {}
+
+  .entry {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-evenly;
+
+    table {
+      caption {
+        font: optional;
+        font-size: 26px;
+        font-weight: bold;
+        color: #22b2da;
+      }
+
+      td {
+        padding: 8px;
+        border-bottom: 1px #f00 dotted;
+      }
+
+      .city-data {
+        text-align: right;
+      }
+    }
+
+    #pixabay-image {
+      text-align: center;
+      padding: 16px 0 16px 0;
+
+      img {
+        box-shadow: #333 10px 10px 10px;
+      }
+    }
+
+    #conclusion {
+      text-align: center;
     }
   }
 }
@@ -65,38 +109,7 @@ body {
   font-size: 15px;
 }
 
-.headline {
-  font-size: 50px;
-}
-
 .title {}
-
-label {
-  display: block;
-  font-size: 27px;
-}
-
-input {
-  display: block;
-  height: 60px;
-  width: 99.5%;
-  background: #22b2da;
-  color: #fff;
-  font-size: 20px;
-  font-family: "Oswald", sans-serif;
-  border: none;
-}
-
-button {
-  background: #22b2da;
-  color: #fff;
-  font-size: 24px;
-  font-family: "Oswald", sans-serif;
-  border: none;
-  box-shadow: 2px 4px 5px #444;
-  margin: auto;
-  padding: 12px;
-}
 
 h1 {
   font-size: 36px;
